# tar-codec

./: .gitignore  AGENTS.md  AUDIT.md  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: benchmark.yml  ci.yml  publish.yml  zizmor.yml
crates/archive-trait/: Cargo.toml  README.md
crates/archive-trait/src/: builder.rs  component_tree.rs  extract.rs  lib.rs  name.rs
crates/archive-trait/src/builder/: traversal.rs
crates/archive-trait/src/extract/: path.rs  root.rs
crates/archive-trait/src/extract/root/: buffered.rs
crates/archive-trait/tests/: builder.rs  extract.rs  links.rs
crates/archive-trait/tests/support/: mod.rs
crates/tar-codec/: Cargo.toml
crates/tar-codec/benches/: comparison.rs  extraction_filesystem.rs
crates/tar-codec/benches/support/: mod.rs
crates/tar-codec/src/: blocking.rs  decode.rs  encode.rs  extract.rs  lib.rs  name.rs  paths.rs  test_support.rs
crates/tar-codec/src/decode/: extract.rs
crates/tar-codec/src/encode/: traversal.rs
crates/tar-codec/tests/: comparison.rs  encode.rs  extract.rs  links.rs  members.rs  metadata.rs
crates/tar-codec/tests/assets/malo/: README.md
crates/tar-codec/tests/extract/: malo.rs
crates/tar-codec/tests/support/: mod.rs
crates/tar-framing/: Cargo.toml  README.md
crates/tar-framing/benches/: framing.rs
crates/tar-framing/src/: error.rs  header.rs  lib.rs  logical.rs  pax.rs  physical.rs  stream.rs  test_support.rs  write.rs
crates/tarpit/: Cargo.toml  README.md
crates/tarpit/src/: main.rs
docs/: ARCHITECTURE.md  tar.mmd
scripts/: torture_pypi_sdists.py
scripts/tests/: test_torture_pypi_sdists.py
