[workspace]
resolver = "3"
members = ["crates/tar-codec", "crates/tar-framing", "crates/tarpit"]

[workspace.package]
edition = "2024"
homepage = "https://github.com/astral-sh/tar-codec"
repository = "https://github.com/astral-sh/tar-codec"
authors = ["William Woodruff <william@astral.sh>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
readme = "README.md"

[workspace.dependencies]
tar-codec = { path = "crates/tar-codec" }
tar-framing = { path = "crates/tar-framing" }

async-compression = { version = "0.4", features = ["gzip", "tokio"] }
astral-tokio-tar = "0.6.2"
cap-std = "4.0.2"
clap = "4.6"
criterion = { version = "0.8.2", features = ["async_tokio"] }
junction = "2.0.0"
tar = "0.4.46"
tempfile = "3"
thiserror = "2"
tokio = "1"
tokio-stream = "0.1"
walkdir = "2.5.0"
windows-sys = { version = "0.60.2", features = ["Win32_Storage_FileSystem"] }

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
