[package]
name = "tar-codec"
description = "tar-codec is a small, fast, constrained tar encoder and decoder for Rust"

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
cap-std = { workspace = true }
tar-framing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "rt", "sync"] }
tokio-stream = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[target.'cfg(windows)'.dev-dependencies]
junction = { workspace = true }

[dev-dependencies]
astral-tokio-tar = { workspace = true }
criterion = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[[bench]]
name = "comparison"
harness = false
