[package]
name = "tar-codec"
description = "tar-codec is a small, fast, constrained tar encoder and decoder for Rust"

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
archive-trait = { workspace = true }
tar-framing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }

[dev-dependencies]
astral-tokio-tar = { workspace = true }
criterion = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt", "time"] }

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "extraction_filesystem"
harness = false

[lib]
doctest = false
