[package]
name = "tar-framing"
description = "A framing layer for tar archives."
readme = "README.md"

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
futures-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[[bench]]
name = "framing"
harness = false

[lib]
doctest = false
