[package]
name = "tarpit"
description = "A CLI for inspecting and extracting tar streams"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true

[dependencies]
tar-codec = { workspace = true }
tar-framing = { workspace = true }

async-compression = { workspace = true }
clap = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }
tokio-stream = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
