[package]
name = "tarpit"
description = "A CLI for inspecting and extracting tar streams"
readme = "README.md"

edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

# NOTE: tarpit is intentionally not published,
# as it's for debugging/testing/diagnostics only.
publish = false

[dependencies]
tar-codec = { workspace = true }
tar-framing = { workspace = true }

async-compression = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt"] }
